// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With the multiple charges record renders correctly 1`] = `
<div>
  <main>
    <div
      class="mw8 center f6 f5-l ph2"
    >
      <article
        class="lh-copy"
      >
        <div
          class="bg-white shadow bl bw3 b--blue mv4 pv4 ph4 ph5-l br3"
        >
          <h1
            class="f3 fw9 ma0 mb2"
          >
            App Demo
          </h1>
          <p
            class="mw7 mb3"
          >
            This demo provides example records that demonstrate the complex rules of expungement and the analysis features of RecordSponge. The demo version does not search the OECI database, and thus doesn't require an OECI account to use.
          </p>
          <p
            class="mw7 mb3"
          >
            You can also "Enable Editing" below the search panel to build and evaluate different examples. If you are looking to evaluate your own record for expungement eligibility, we urge you to contact
             
            <a
              class="link bb hover-blue"
              href="/"
            >
               
              one of our partners
               
            </a>
            for assistance. This software is not standalone legal advice.
          </p>
          <p
            class="mb3 mw7 "
          >
            Try searching any of the following examples by entering them in the search panel below.
          </p>
          <p
            class="mb4"
          >
            Or,
             
            <a
              class="link bb mid-gray hover-blue"
              href="/oeci"
            >
              log in to OECI
            </a>
            .
          </p>
          <div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                Single Conviction
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        Single
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Conviction
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    As a simple example, if a person's record has only a single convicted charge, it is eligible after three years.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                Multiple Charges
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        Multiple
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Charges
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    If a record has more than one case, the time restrictions quickly get more complex, as this example demonstrates. Eligibility dates depend on whether dismissals are on the same or a different case as a conviction. Searching OECI will also reveal traffic violations, which are always ineligible.
                  </p>
                  <p
                    class="pb2"
                  >
                    This record also includes a case with an outstanding balance due for fines, which is indicated in both the record summary and on the case itself.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Searching for a common name will often bring up records that belong to different individuals, leading to an incorrect analysis for the set of resulting cases. Another source of confusion is that each case may or may not incude a birth year, as well as middle name or initial.
                  </p>
                  <p
                    class="pb2"
                  >
                    It is thus always recommended to provide a birth date in the search. You can also use the Enable Editing feature to remove cases or charges from the resulting record, and these charges will be excluded in the eligibility analysis.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common – Class B Felony and Marijuana
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                    <div>
                      <div
                        class="fw6"
                      >
                        Date of Birth
                      </div>
                      <div>
                        1/1/1970
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Most charges that are eligible are also subject to the same set of time restrictions. There are some exceptions to this, notably Class B Felonies, and possession of less than an ounce of marijuana.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common – Needs More Analysis
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                    <div>
                      <div
                        class="fw6"
                      >
                        Date of Birth
                      </div>
                      <div>
                        2/2/1985
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Some charges cannot be evaluated for eligibility until the user provides some follow-up information about the charge. RecordSponge deals with this ambiguity by showing the different possible outcomes for eligibility, and by asking the user for the required extra information in order to determine an exact analysis.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </article>
      <section
        class="bg-white shadow br3 pa4 mt3 "
      >
        <form
          class="mw7 center"
          novalidate=""
        >
          <div
            class="flex"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-r"
            >
              <label
                class="db mb1 fw6"
                for="today"
              >
                Expunge Date
                 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="today"
                required=""
                type="text"
                value="1/2/2023"
              />
            </div>
          </div>
          <div
            class="flex flex-wrap items-end"
            data-testid="alias-form-0"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="firstName"
              >
                First Name
                 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br-0-ns br--left-ns relative"
                id="firstName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="middleName"
              >
                Middle Name
                 
                <span
                  class="fw4 f6"
                >
                  (Optional)
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br0-ns"
                id="middleName"
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="lastName"
              >
                Last Name
                 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 bl-0-ns br--right-ns"
                id="lastName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-l"
            >
              <label
                class="db mb1 fw6"
                for="birthDate"
              >
                Date of Birth
                 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="birthDate"
                type="text"
                value=""
              />
            </div>
            <div
              class="visually-hidden flex items-center pb1 mb3 ml3-ns ml0-l"
            >
              <span
                class=" visually-hidden fw5 bl bw2 b--blue bg-gray-blue-2 pa2 pr3 mr2 mb2"
              >
                1 Result
              </span>
              <button
                class="br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pa2 mb2"
                type="button"
              >
                <i
                  class="fas fa-times-circle pr1"
                />
                Remove
              </button>
            </div>
          </div>
          <div
            class="flex"
          >
            <button
              class=" w4 tc br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pv3 ph3 mr2"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-plus-circle pr1"
              />
              Alias
            </button>
            <button
              class=" fw7 br2 bg-blue white bg-animate hover-bg-dark-blue db w-100 tc pv3 btn--search"
              type="submit"
            >
              <i
                aria-hidden="true"
                class="fas fa-search pr2"
              />
              Search
            </button>
          </div>
          <div
            class="black-70 w-100"
            role="alert"
          />
        </form>
      </section>
      <section
        class="bg-white shadow br3 mv3 ph3 pv1"
      >
        <div
          class="flex flex-wrap items-center"
        >
          <div
            class="f5 fw7 mr4"
          >
            View Options
          </div>
          <fieldset
            aria-label="Summary overview sort options"
            class="flex flex-wrap radio radio-sm"
            dir="ltr"
            role="radiogroup"
          >
            <p
              class="pr3"
            >
              <input
                aria-checked="true"
                checked=""
                id="summary-overview-sort-options-default"
                name="summary overview sort options"
                type="radio"
                value="Default"
              />
              <label
                for="summary-overview-sort-options-default"
              >
                Default
              </label>
            </p>
            <p
              class="pr3"
            >
              <input
                aria-checked="false"
                id="summary-overview-sort-options-expanded"
                name="summary overview sort options"
                type="radio"
                value="Expanded"
              />
              <label
                for="summary-overview-sort-options-expanded"
              >
                Expanded
              </label>
            </p>
          </fieldset>
        </div>
      </section>
      <section />
      <section>
        <div
          class="bg-white shadow br3 mb3 ph3 pb3"
        >
          <div
            class="flex flex-wrap justify-end mb1"
          >
            <h2
              class="f5 fw7 mv3 mr-auto"
            >
              Search Summary
            </h2>
            <button
              class="ma2 nowrap mid-gray link fw6 br3 pv1 ph2 hover-blue"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-bolt pr2"
              />
              Generate Paperwork
            </button>
            <button
              class="ma2 nowrap mid-gray link fw6 br3 pv1 ph2 hover-blue "
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-download pr2"
              />
              Summary PDF
            </button>
          </div>
          <div
            class="flex-ns flex-wrap"
          >
            <div
              class="w-100 w-two-thirds-l"
            >
              <h3
                class="bt b--light-gray pt2 mb3"
              >
                <span
                  class="fw7"
                >
                  Cases
                </span>
                 (
                3
                )
              </h3>
              <h3
                class="bt b--light-gray pt2 mb3"
              >
                <span
                  class="fw7"
                >
                  Charges
                </span>
                 (
                6
                )
                <p
                  class="f6 fw5 pt1"
                >
                  Excludes traffic violations
                </p>
              </h3>
              <div
                class="mb3"
              >
                <div
                  class="green bb b--light-gray lh-copy pb1"
                >
                  <span
                    class="fw7 mb2"
                  >
                    Eligible Now
                  </span>
                   
                  (1)
                </div>
                <ul
                  class="list"
                >
                  <li
                    class="f6 bb b--light-gray pv2"
                  >
                    <a
                      class="link hover-blue"
                      href="#110000-1"
                    >
                      110000
                      : 
                      Theft in the Third Degree (DISMISSED) Charged Jan 21, 2022
                    </a>
                  </li>
                </ul>
              </div>
              <div
                class="mb3"
              >
                <div
                  class="dark-blue bb b--light-gray lh-copy pb1"
                >
                  <span
                    class="fw7 mb2"
                  >
                    Eligible Now If Balance Paid
                  </span>
                   
                  (2)
                </div>
                <ul
                  class="list"
                >
                  <li
                    class="fw7 pt2"
                  >
                    Baker 100000 – $1000.0
                  </li>
                  <li
                    class="f6 bb b--light-gray pv2"
                  >
                    <a
                      class="ml2"
                      href="#100000-1"
                    >
                      100000
                      : 
                      Disorderly Conduct in the First Degree (CONVICTED) Charged Jan 21, 2019
                    </a>
                  </li>
                  <li
                    class="f6 bb b--light-gray pv2"
                  >
                    <a
                      class="ml2"
                      href="#100000-2"
                    >
                      100000
                      : 
                      Disorderly Conduct in the Second Degree (DISMISSED) Charged Jan 21, 2019
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              class="w-100 w-33-l ph3-l mb3"
            >
              <div
                class="mb4"
              >
                <h3
                  class="fw7 bt b--light-gray pt2 mb3"
                >
                  Balance due by county
                </h3>
                <ul
                  class="mw5 list"
                >
                  <div>
                    <h4
                      class="fw6 mb2"
                    >
                      Baker
                    </h4>
                    <ul
                      class="mw5 list mb3"
                    >
                      <li
                        class="mb2"
                      >
                        <a
                          class="link hover-blue"
                          href="/#100000"
                        >
                          100000
                        </a>
                         
                        <span
                          class="fr"
                        >
                          $1,000.00
                        </span>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="mw5 bt b--light-gray pt2"
                  >
                    <span
                      class="fw6"
                    >
                      Total
                    </span>
                    <span
                      class="fr"
                    >
                      $1,000.00
                    </span>
                  </div>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="tr"
        >
          <button
            class="inline-flex bg-white f6 fw5 br2 ba b--black-10 mid-gray link hover-blue pv1 ph2 mb3"
          >
            Enable Editing
          </button>
           
          <a
            class="link hover-blue "
            href="/manual#editing"
          >
            <i
              aria-hidden="true"
              class="gray hover-dark-blue fas fa-question-circle"
            />
            <span
              class="visually-hidden"
            >
              Editing Help
            </span>
          </a>
        </div>
        <div
          class="mb3"
        >
          <ul
            class="list"
          >
            <li
              id="scroll-spy-trigger_case_110000"
            >
              <div
                class="f6 f5-l bg-gray-blue-3 shadow br3 pa1 mb4"
                id="110000"
              >
                <div
                  class="cf relative pv2 pr5 pr6-ns"
                >
                  <div
                    class="cf mb2"
                  >
                    <div
                      class="ch1 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Case
                      </div>
                      <a
                        class="link bb hover-blue"
                        href="http://localhost:5000/api/case_detail_page/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        110000
                      </a>
                    </div>
                    <div
                      class="ch2 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Status
                      </div>
                      Closed
                    </div>
                    <div
                      class="ch3 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DA Number
                      </div>
                      <span
                        class="break-all"
                      >
                        01234567
                      </span>
                    </div>
                  </div>
                  <div
                    class="cl"
                  >
                    <div
                      class="ch4 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        County
                      </div>
                      Multnomah
                    </div>
                    <div
                      class="ch5 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Balance
                      </div>
                      $0.00
                    </div>
                    <div
                      class="ch6 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DOB
                      </div>
                      <span>
                        1990
                      </span>
                    </div>
                    <div
                      class="ch7 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Name
                      </div>
                      <span>
                        MULTIPLE CHARGES
                      </span>
                    </div>
                  </div>
                </div>
                <ul
                  class="list"
                >
                  <li
                    id="scroll-spy-trigger_charge_110000-1"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="110000-1"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="green bg-washed-green fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Eligible Now
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-time"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-check-circle green bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <span
                                class="fw7"
                              >
                                Time:
                              </span>
                               Eligible Now
                            </div>
                          </div>
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-circle gray outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Dismissed Criminal Charge – Dismissals are generally eligible under 137.225(1)(d)
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              164043-Theft in the Third Degree
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              Misdemeanor Class C
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Dismissed - Apr 21, 2022
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 21, 2022
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Dismissed criminal charges are generally eligible under 137.225(1)(d).  All criminal charges and Contempt of Court charges that are dismissed fall under this charge type.
                          </div>
                          <div
                            class="mb2"
                          >
                                   Charges without a named charge level in OECI are not considered criminal charges, and are thus not eligible under this or any subsection.
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    id="scroll-spy-trigger_charge_110000-2"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="110000-2"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="red bg-washed-red fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Ineligible
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-times-circle red bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Infraction reason
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              164043-A low level infraction
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              A low level infraction
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Dismissed - Apr 21, 2022
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 21, 2022
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Dismissed criminal charges are generally eligible under 137.225(1)(d).  All criminal charges and Contempt of Court charges that are dismissed fall under this charge type.
                          </div>
                          <div
                            class="mb2"
                          >
                                   Charges without a named charge level in OECI are not considered criminal charges, and are thus not eligible under this or any subsection.
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
            <li
              id="scroll-spy-trigger_case_100000"
            >
              <div
                class="f6 f5-l bg-gray-blue-3 shadow br3 pa1 mb4"
                id="100000"
              >
                <div
                  class="cf relative pv2 pr5 pr6-ns"
                >
                  <div
                    class="cf mb2"
                  >
                    <div
                      class="ch1 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Case
                      </div>
                      <a
                        class="link bb hover-blue"
                        href="http://localhost:5000/api/case_detail_page/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        100000
                      </a>
                    </div>
                    <div
                      class="ch2 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Status
                      </div>
                      Closed
                    </div>
                    <div
                      class="ch3 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DA Number
                      </div>
                      <span
                        class="break-all"
                      >
                        01234567
                      </span>
                    </div>
                  </div>
                  <div
                    class="cl"
                  >
                    <div
                      class="ch4 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        County
                      </div>
                      Baker
                    </div>
                    <div
                      class="ch5 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Balance
                      </div>
                      $1,000.00
                    </div>
                    <div
                      class="ch6 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DOB
                      </div>
                      <span>
                        1990
                      </span>
                    </div>
                    <div
                      class="ch7 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Name
                      </div>
                      <span>
                        MULTIPLE CHARGES
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="bg-washed-red fw6 br3 pv2 ph3 ma2"
                >
                  Eligible charges are ineligible until balance is paid
                </div>
                <ul
                  class="list"
                >
                  <li
                    id="scroll-spy-trigger_charge_100000-1"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="100000-1"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="green bg-washed-green fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Eligible Now
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-time"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-check-circle green bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <span
                                class="fw7"
                              >
                                Time:
                              </span>
                               Eligible Now
                            </div>
                          </div>
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-circle gray outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Misdemeanor Class A – Eligible under 137.225(1)(b)
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              166223-Disorderly Conduct in the First Degree
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              Misdemeanor Class A
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Convicted - Apr 21, 2019
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 21, 2019
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Convictions for misdemeanors are generally eligible under ORS 137.225(1)(b).
                          </div>
                          <div
                            class="mb2"
                          >
                            Exceptions include convictions related to sex, child and elder abuse, and driving, including DUII.
                          </div>
                          <div
                            class="mb2"
                          >
                            Dismissals for misdemeanors are generally eligible under ORS 137.225(1)(d). Exceptions include cases dismissed due to successful completion of DUII diversion.
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    id="scroll-spy-trigger_charge_100000-2"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="100000-2"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="green bg-washed-green fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Eligible Now
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-time"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-check-circle green bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <span
                                class="fw7"
                              >
                                Time:
                              </span>
                               Eligible Now
                            </div>
                          </div>
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-circle gray outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Dismissed Criminal Charge – Dismissals are generally eligible under 137.225(1)(d)
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              1662250A-Disorderly Conduct in the Second Degree
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              Misdemeanor Class B
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Unrecognized ("Unrecognized")
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 21, 2019
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Dismissed criminal charges are generally eligible under 137.225(1)(d).  All criminal charges and Contempt of Court charges that are dismissed fall under this charge type.
                          </div>
                          <div
                            class="mb2"
                          >
                                   Charges without a named charge level in OECI are not considered criminal charges, and are thus not eligible under this or any subsection.
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
            <li
              id="scroll-spy-trigger_case_120000"
            >
              <div
                class="f6 f5-l bg-gray-blue-3 shadow br3 pa1 mb4"
                id="120000"
              >
                <div
                  class="cf relative pv2 pr5 pr6-ns"
                >
                  <div
                    class="cf mb2"
                  >
                    <div
                      class="ch1 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Case
                      </div>
                      <a
                        class="link bb hover-blue"
                        href="http://localhost:5000/api/case_detail_page/"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        120000
                      </a>
                    </div>
                    <div
                      class="ch2 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Status
                      </div>
                      Closed
                    </div>
                    <div
                      class="ch3 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DA Number
                      </div>
                      <span
                        class="break-all"
                      >
                        01234567
                      </span>
                    </div>
                  </div>
                  <div
                    class="cl"
                  >
                    <div
                      class="ch4 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        County
                      </div>
                      Washington
                    </div>
                    <div
                      class="ch5 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Balance
                      </div>
                      $0.00
                    </div>
                    <div
                      class="ch6 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        DOB
                      </div>
                      <span>
                        1990
                      </span>
                    </div>
                    <div
                      class="ch7 fl ph3 pv1"
                    >
                      <div
                        class="fw7"
                      >
                        Name
                      </div>
                      <span>
                        MULTIPLE CHARGES
                      </span>
                    </div>
                  </div>
                </div>
                <ul
                  class="list"
                >
                  <li
                    id="scroll-spy-trigger_charge_120000-1"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="120000-1"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="purple bg-washed-purple fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Possibly Eligible
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-question-circle purple bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Traffic Violation – Dismissed violations are eligible under 137.225(1)(b) but administrative reasons may make this difficult to expunge.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              811265-Failure to Obey Traffic Control Device
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              Violation
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Dismissed - Apr 21, 2011
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 21, 2011
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Convictions for traffic-related offenses are not eligible for expungement under ORS 137.225(7)(a). This includes Violations, Misdemeanors, and Felonies.
                          </div>
                          <div
                            class="mb2"
                          >
                            The eligibility of a dismissed traffic violation is subject to some debate. 137.225(1)(d) says that "At any time after an acquittal or a dismissal...an arrested, cited or charged person may apply to the court in the county in which the person was arrested, cited or charged, for entry of an order setting aside the record of the arrest, citation or charge." A driving offense probably qualifies as a citation under any definition of the word.
                          </div>
                          <div
                            class="mb2"
                          >
                            However, DAs will probably object to filing for these, at least initially, based off their understanding of the previous version of the law, and their relationships with the other parts of the State, and the practical administrative burdens this would place on those systems.
                          </div>
                          <div
                            class="mb2"
                          >
                            Most directly, it’s not clear that the local municipal systems have a good way of expunging traffic tickets, dismissed or not.
                          </div>
                          <div
                            class="mb2"
                          >
                            As such, petitioners filing to expunge dismissed traffic tickets may receive pushback and have their petition rejected, and do so at their own risk.
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <li
                    id="scroll-spy-trigger_charge_120001-1"
                  >
                    <div
                      class="relative br3 bg-white ma2"
                      id="120001-1"
                    >
                      <div
                        class="relative connect connect-result pr6"
                      >
                        <h2
                          class="red bg-washed-red fw6 pv2 ph3 ma2 mb3 dib br3 relative outline-2-white z-1"
                        >
                          Ineligible
                        </h2>
                      </div>
                      <div
                        class="flex-l ph3 pb2"
                      >
                        <div
                          class="w-100 w-40-l relative pr6 pr4-l"
                        >
                          <div
                            class="relative mb3 connect connect-type"
                          >
                            <i
                              aria-hidden="true"
                              class="absolute fas fa-question-circle purple bg-white outline-2-white z-1"
                            />
                            <div
                              class="ml3 pl1"
                            >
                              <div
                                class="false"
                              >
                                <span
                                  class="fw7"
                                >
                                  Type: 
                                </span>
                                Public derpiness is never excusable.
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="w-100 w-60-l pr3 pr6-l"
                        >
                          <ul
                            class="list"
                          >
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charge
                              </span>
                              811265-Public Derpiness
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Severity
                              </span>
                               
                              Violation
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Disposition
                              </span>
                               
                              Convicted - Apr 22, 2011
                            </li>
                            <li
                              class="flex mb2"
                            >
                              <span
                                class="w6rem shrink-none fw7"
                              >
                                Charged
                              </span>
                               
                              Jan 22, 2011
                            </li>
                          </ul>
                        </div>
                      </div>
                      <div
                        class="bt b--light-gray pt2 mh3 pb2"
                      >
                        <button
                          aria-controls="panel--disclosure"
                          aria-expanded="false"
                        >
                          <span
                            class="flex items-center fw5 mid-gray link hover-blue pb1"
                          >
                            More Info
                            <span
                              aria-hidden="true"
                              class="pt1 pl1 fas fa-angle-down"
                            />
                          </span>
                        </button>
                        <div
                          class="pt2"
                          hidden=""
                          id="panel--disclosure"
                        >
                          <div
                            class="mb2"
                          >
                            Rule that everyone knows
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </section>
      <div
        class="bg-white shadow mb6 pa4 br3"
      >
        <h2
          class="fw6 mb3"
        >
          Assumptions
        </h2>
        <p
          class="mb3"
        >
          We are only able to access your public Oregon records.
        </p>
        <p
          class="mb2"
        >
          Your analysis may be different if you have had cases:
        </p>
        <ul
          class="lh-copy pl4 mw6 mb3"
        >
          <li
            class="mb2"
          >
            Previously expunged
          </li>
          <li
            class="mb2"
          >
            From States besides Oregon within the last ten years
          </li>
          <li
            class="mb2"
          >
            From Federal Court within the last ten years
          </li>
          <li
            class="mb2"
          >
            From local District Courts, e.g. Medford Municipal Court (not Jackson County Circuit Court) from within the last ten years
          </li>
          <li
            class="mb2"
          >
            In which balances were sent to collections; due to gaps in OECI, RecordSponge may not reflect actual case balances.
          </li>
        </ul>
        <p>
          <a
            class="link hover-blue underline"
            href="/manual#assumption1"
          >
            Learn more in the Manual
          </a>
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`Without a record renders correctly 1`] = `
<div>
  <main>
    <div
      class="mw8 center f6 f5-l ph2"
    >
      <article
        class="lh-copy"
      >
        <div
          class="bg-white shadow bl bw3 b--blue mv4 pv4 ph4 ph5-l br3"
        >
          <h1
            class="f3 fw9 ma0 mb2"
          >
            App Demo
          </h1>
          <p
            class="mw7 mb3"
          >
            This demo provides example records that demonstrate the complex rules of expungement and the analysis features of RecordSponge. The demo version does not search the OECI database, and thus doesn't require an OECI account to use.
          </p>
          <p
            class="mw7 mb3"
          >
            You can also "Enable Editing" below the search panel to build and evaluate different examples. If you are looking to evaluate your own record for expungement eligibility, we urge you to contact
             
            <a
              class="link bb hover-blue"
              href="/"
            >
               
              one of our partners
               
            </a>
            for assistance. This software is not standalone legal advice.
          </p>
          <p
            class="mb3 mw7 "
          >
            Try searching any of the following examples by entering them in the search panel below.
          </p>
          <p
            class="mb4"
          >
            Or,
             
            <a
              class="link bb mid-gray hover-blue"
              href="/oeci"
            >
              log in to OECI
            </a>
            .
          </p>
          <div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                Single Conviction
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        Single
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Conviction
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    As a simple example, if a person's record has only a single convicted charge, it is eligible after three years.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                Multiple Charges
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        Multiple
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Charges
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    If a record has more than one case, the time restrictions quickly get more complex, as this example demonstrates. Eligibility dates depend on whether dismissals are on the same or a different case as a conviction. Searching OECI will also reveal traffic violations, which are always ineligible.
                  </p>
                  <p
                    class="pb2"
                  >
                    This record also includes a case with an outstanding balance due for fines, which is indicated in both the record summary and on the case itself.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Searching for a common name will often bring up records that belong to different individuals, leading to an incorrect analysis for the set of resulting cases. Another source of confusion is that each case may or may not incude a birth year, as well as middle name or initial.
                  </p>
                  <p
                    class="pb2"
                  >
                    It is thus always recommended to provide a birth date in the search. You can also use the Enable Editing feature to remove cases or charges from the resulting record, and these charges will be excluded in the eligibility analysis.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common – Class B Felony and Marijuana
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                    <div>
                      <div
                        class="fw6"
                      >
                        Date of Birth
                      </div>
                      <div>
                        1/1/1970
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Most charges that are eligible are also subject to the same set of time restrictions. There are some exceptions to this, notably Class B Felonies, and possession of less than an ounce of marijuana.
                  </p>
                </div>
              </div>
            </div>
            <div>
              <h2
                class="fw9 bt b--light-gray pt2 mb3"
              >
                John Common – Needs More Analysis
              </h2>
              <div
                class="mw7 mb4"
              >
                <div>
                  <div
                    class="flex lh-title mb3"
                  >
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        First Name
                      </div>
                      <div>
                        John
                      </div>
                    </div>
                    <div
                      class="mr4"
                    >
                      <div
                        class="fw6"
                      >
                        Last Name
                      </div>
                      <div>
                        Common
                      </div>
                    </div>
                    <div>
                      <div
                        class="fw6"
                      >
                        Date of Birth
                      </div>
                      <div>
                        2/2/1985
                      </div>
                    </div>
                  </div>
                  <p
                    class="pb2"
                  >
                    Some charges cannot be evaluated for eligibility until the user provides some follow-up information about the charge. RecordSponge deals with this ambiguity by showing the different possible outcomes for eligibility, and by asking the user for the required extra information in order to determine an exact analysis.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </article>
      <section
        class="bg-white shadow br3 pa4 mt3 "
      >
        <form
          class="mw7 center"
          novalidate=""
        >
          <div
            class="flex"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-r"
            >
              <label
                class="db mb1 fw6"
                for="today"
              >
                Expunge Date
                 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="today"
                required=""
                type="text"
                value="1/2/2023"
              />
            </div>
          </div>
          <div
            class="flex flex-wrap items-end"
            data-testid="alias-form-0"
          >
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="firstName"
              >
                First Name
                 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br-0-ns br--left-ns relative"
                id="firstName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="middleName"
              >
                Middle Name
                 
                <span
                  class="fw4 f6"
                >
                  (Optional)
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 br0-ns"
                id="middleName"
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 "
            >
              <label
                class="db mb1 fw6"
                for="lastName"
              >
                Last Name
                 
                <span
                  class="fw4 f6"
                />
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 bl-0-ns br--right-ns"
                id="lastName"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="w-100 w-third-ns w-25-l mb3 pl2-l"
            >
              <label
                class="db mb1 fw6"
                for="birthDate"
              >
                Date of Birth
                 
                <span
                  class="fw4 f6"
                >
                  mm/dd/yyyy
                </span>
              </label>
              <input
                aria-invalid="false"
                class="w-100 br2 b--black-20 pa3 "
                id="birthDate"
                type="text"
                value=""
              />
            </div>
            <div
              class="visually-hidden flex items-center pb1 mb3 ml3-ns ml0-l"
            >
              <span
                class=" visually-hidden fw5 bl bw2 b--blue bg-gray-blue-2 pa2 pr3 mr2 mb2"
              >
                1 Result
              </span>
              <button
                class="br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pa2 mb2"
                type="button"
              >
                <i
                  class="fas fa-times-circle pr1"
                />
                Remove
              </button>
            </div>
          </div>
          <div
            class="flex"
          >
            <button
              class=" w4 tc br2 bg-gray-blue-2 link hover-dark-blue mid-gray fw5 pv3 ph3 mr2"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fas fa-plus-circle pr1"
              />
              Alias
            </button>
            <button
              class=" fw7 br2 bg-blue white bg-animate hover-bg-dark-blue db w-100 tc pv3 btn--search"
              type="submit"
            >
              <i
                aria-hidden="true"
                class="fas fa-search pr2"
              />
              Search
            </button>
          </div>
          <div
            class="black-70 w-100"
            role="alert"
          />
        </form>
      </section>
      <section
        class="bg-white shadow br3 mv3 ph3 pv1"
      >
        <div
          class="flex flex-wrap items-center"
        >
          <div
            class="f5 fw7 mr4"
          >
            View Options
          </div>
          <fieldset
            aria-label="Summary overview sort options"
            class="flex flex-wrap radio radio-sm"
            dir="ltr"
            role="radiogroup"
          >
            <p
              class="pr3"
            >
              <input
                aria-checked="true"
                checked=""
                id="summary-overview-sort-options-default"
                name="summary overview sort options"
                type="radio"
                value="Default"
              />
              <label
                for="summary-overview-sort-options-default"
              >
                Default
              </label>
            </p>
            <p
              class="pr3"
            >
              <input
                aria-checked="false"
                id="summary-overview-sort-options-expanded"
                name="summary overview sort options"
                type="radio"
                value="Expanded"
              />
              <label
                for="summary-overview-sort-options-expanded"
              >
                Expanded
              </label>
            </p>
          </fieldset>
        </div>
      </section>
      <section />
      <section>
        <div
          class="tr"
        >
          <button
            class="inline-flex bg-white f6 fw5 br2 ba b--black-10 mid-gray link hover-blue pv1 ph2 mb3"
          >
            Enable Editing
          </button>
           
          <a
            class="link hover-blue "
            href="/manual#editing"
          >
            <i
              aria-hidden="true"
              class="gray hover-dark-blue fas fa-question-circle"
            />
            <span
              class="visually-hidden"
            >
              Editing Help
            </span>
          </a>
        </div>
      </section>
      <div
        class="bg-white shadow mb6 pa4 br3"
      >
        <h2
          class="fw6 mb3"
        >
          Assumptions
        </h2>
        <p
          class="mb3"
        >
          We are only able to access your public Oregon records.
        </p>
        <p
          class="mb2"
        >
          Your analysis may be different if you have had cases:
        </p>
        <ul
          class="lh-copy pl4 mw6 mb3"
        >
          <li
            class="mb2"
          >
            Previously expunged
          </li>
          <li
            class="mb2"
          >
            From States besides Oregon within the last ten years
          </li>
          <li
            class="mb2"
          >
            From Federal Court within the last ten years
          </li>
          <li
            class="mb2"
          >
            From local District Courts, e.g. Medford Municipal Court (not Jackson County Circuit Court) from within the last ten years
          </li>
          <li
            class="mb2"
          >
            In which balances were sent to collections; due to gaps in OECI, RecordSponge may not reflect actual case balances.
          </li>
        </ul>
        <p>
          <a
            class="link hover-blue underline"
            href="/manual#assumption1"
          >
            Learn more in the Manual
          </a>
        </p>
      </div>
    </div>
  </main>
</div>
`;
